--- a/style-next.css
+++ b/style-next.css
@@ -3093,3 +3093,214 @@ h1{
  }
 
  /*------------------------ 8 экрана--------------------------------*/
+
+ .about-u{
+    margin: 56px 538px 54px 702px;
+ }
+ @media (max-width:1440px){
+    .about-u{
+       margin-left: 442px;
+       margin-right: 318px;
+    }
+ }
+ @media (max-width:1366px){
+   .about-u{
+      margin-left: 402px;
+      margin-right: 284px;
+   }
+}
+@media (max-width:1024px){
+   .about-u{
+      margin: 48px 127px 48px 316px;
+   }
+}
+@media (max-width:768px){
+   .about-u{
+      margin-left: 185px;
+      margin-right: 137px;
+   }
+}
+@media (max-width:640px){
+   .about-u{
+      margin: 32px 129px 24px 129px;
+   }
+}
+@media (max-width:360px){
+   .about-u{
+      margin-left: 30px;
+      margin-right: 30px;
+   }
+}
+
+ .about-u__title{
+   width: 175px;
+   height: 32px;
+   font-weight: 600;
+   font-size: 28px;
+   line-height: 24px;
+   padding-left: 193px;
+   text-align: center;
+ }
+ @media (max-width:1024px){
+    .about-u__title{
+      width: 118px;
+      font-size: 24px;
+      padding-left: 137px;
+    }
+ }
+ @media (max-width:1024px){
+   .about-u__title{
+     width: 74px;
+     font-size: 20px;
+     padding-left: 162px;
+   }
+}
+@media (max-width:640px){
+   .about-u__title{
+     width: 382px;
+     font-size: 16px;
+     padding-left: 0px;
+   }
+}
+@media (max-width:360px){
+   .about-u__title{
+     width: 299px;
+   }
+}
+
+
+ .about-u__text{
+   width: 680px;
+   font-weight: 500;
+   font-size: 18px;
+   line-height: 24px;
+   padding: 24px 0px;
+ }
+ @media (max-width:1024px){
+    .about-u__text{
+      width: 481px;
+      font-size: 16px;
+    } 
+ }
+ @media (max-width:768px){
+   .about-u__text{
+     width: 446px;
+     font-size: 14px;
+   } 
+}
+@media (max-width:640px){
+   .about-u__text{
+     width: 382px;
+     padding-bottom: 32px;
+   } 
+}
+@media (max-width:360px){
+   .about-u__text{
+     width: 299px;
+   } 
+}
+
+
+ .about-u-contacts__title{
+   width: 680px;
+   height: 26px;
+   font-weight: normal;
+   font-size: 22px;
+   line-height: 26px;
+ }
+ @media (max-width:1024px){
+   .about-u-contacts__title{
+     width: 481px;
+     font-size: 22px;
+   } 
+}
+@media (max-width:768px){
+   .about-u-contacts__title{
+     width: 446px;
+     font-size: 20px;
+   } 
+}
+@media (max-width:640px){
+   .about-u-contacts__title{
+     width: 382px;
+     font-size: 18px;
+   } 
+}
+@media (max-width:360px){
+   .about-u-contacts__title{
+     width: 299px;
+   } 
+}
+
+ .about-u-contacts__text{
+   width: 680px;
+   font-weight: normal;
+   font-size: 16px;
+   line-height: 140%;
+   padding-top: 24px;
+   padding-bottom: 40px;
+ }
+ @media (max-width:1024px){
+   .about-u-contacts__text{
+     width: 481px;
+     padding-top: 16px;
+   } 
+}
+@media (max-width:768px){
+   .about-u-contacts__text{
+     width: 446px;
+     font-size: 14px;
+     padding-bottom: 32px;
+   } 
+}
+@media (max-width:640px){
+   .about-u-contacts__text{
+      width: 382px;
+     padding-bottom: 24px;
+   } 
+}
+@media (max-width:360px){
+   .about-u-contacts__text{
+      width: 299px;
+     padding-top: 18px;
+   } 
+}
+
+.about-u-logo{
+   flex-direction: row;
+   flex-wrap: wrap;
+}
+
+ .about-u-logo__text{
+   width: 640px;
+   height: 22px;
+   font-weight: normal;
+   font-size: 16px;
+   line-height: 140%;
+   color: #6B6B6B;
+   padding-bottom: 9px;
+ }
+ @media (max-width:1024px){
+   .about-u-logo__text{
+     padding-bottom: 17px;
+   } 
+}
+@media (max-width:640px){
+   .about-u-logo__text{
+     width: 282px;
+   } 
+   .about-u-logo .button-logo-outercircle-white{
+      margin-left: 10px;
+      margin-top: 5px;
+      margin-right: 0px;
+   }
+}
+@media (max-width:360px){
+   .about-u-logo__text{
+     width: 211px;
+   } 
+   .about-u-logo .button-logo-outercircle-white{
+      margin-left: 0px;
+      margin-right: 4px;
+   }
+}
