анимация первого блока

--- a/style-next.css
+++ b/style-next.css
@@ -19,11 +19,10 @@ body {
 }
 
 .substrate__image:nth-child(1) {
-
   left: 815px;
   top: 0px;
+  transition: left 1s linear 0s;
 }
-
 @media (max-width: 1440px) {
   .substrate__image:nth-child(1) {
   
@@ -76,6 +75,7 @@ body {
 .substrate__image:nth-child(2) {
   left: 884px;
   top: 470px;
+  transition: top 1s linear 0s;
 }
 @media (max-width: 1440px) {
    .substrate__image:nth-child(2) {
@@ -128,6 +128,7 @@ body {
   left: 277px;
   top: 374px;
   opacity: 0.5;
+  transition: top 1s linear 0s;
 }
 @media (max-width: 1440px) {
    .substrate__image:nth-child(3) {
@@ -185,6 +186,7 @@ body {
   left: 275px;
   top: 566px;
   opacity: 0.6;
+  transition: top 1s linear 0s;
 }
 @media (max-width: 1440px) {
    .substrate__image:nth-child(4) {
@@ -241,6 +243,7 @@ body {
   left: 573px;
   top: 671px;
   opacity: 0.5;
+  transition: top 1s linear 0s;
 }
 @media (max-width: 1440px) {
    .substrate__image:nth-child(5) {
@@ -609,6 +612,9 @@ li:nth-child(3){
 .main-header{
    margin: 68px 0px 272px 387px;
    position: relative;
+   transition-property: margin-left;
+   transition-duration: 1s;
+   transition-timing-function:ease;
 }
 @media (max-width:1440px){
    .main-header{
@@ -753,26 +759,26 @@ h1{
 }
 
 
-.main-header__yelllow{
+.main-header__yellow{
    width: 428px;
    height: 116px;
    padding: 43px 0px;
 }
 @media (max-width:1024px){
-   .main-header__yelllow {
+   .main-header__yellow {
       width: 300px;
       height: 120px;
    }
 }
 @media (max-width:768px){
-   .main-header__yelllow {
+   .main-header__yellow {
       width: 204px;
       height: 114px;
       padding: 40px 0px 44px 0px;
    }
 }
 @media (max-width:640px){
-   .main-header__yelllow {
+   .main-header__yellow {
       width: 381px;
       height: 57px;
       padding: 152px 0px 20px 0px;
@@ -780,27 +786,27 @@ h1{
    }
 }
 @media (max-width:360px){
-   .main-header__yelllow {
+   .main-header__yellow {
       width: 300px;
       height: 76px;
       padding-top: 70px;
    }
 }
 
-.main-header__yelllow p{
+.main-header__yellow p{
    font-weight: 600;
    font-size: 24px;
    line-height: 29px;
    color: #C78100;
 }
 @media (max-width:1024px){
-   .main-header__yelllow p{
+   .main-header__yellow p{
       font-size: 20px;
       line-height: 24px;
    }
 }
 @media (max-width:768px){
-   .main-header__yelllow p{
+   .main-header__yellow p{
       font-size: 16px;
       line-height: 19px;
    }
@@ -871,6 +877,10 @@ h1{
 
 .main-header .outerbutton-yellow{
    width: 183px;
+   transition-property: margin-left;
+   transition-duration: 1s;
+   transition-timing-function:ease;
+   transition-delay: .5s;
 }
 @media (max-width:640px){
    .main-header .outerbutton-yellow{
@@ -1321,11 +1331,14 @@ h1{
   }
  }
 
-
+ @keyframes 
+         fade-in
+          {   0% { opacity: 0.1; }
+             100% { opacity: 1; }   }
  .help-buttons-icons{
     margin: 47px 395px 80px 395px; 
     justify-content: space-between;
-    
+    animation: fade-in 1s linear;    
  }
  @media (max-width:1440px){
    .help-buttons-icons{
